--- a/hero.html
+++ b/hero.html
@@ -22,7 +22,7 @@
         </div>
         <div class="name-selector">
             <div class="btn-addy">
-                <a href="/surprise.html">
+                <a href="/surprise">
                     <button class="addy-btn">Continue</button>
                 </a>
             </div>
