--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="arrow-btn">
             <div class="btn">
-                <a href="/hero.html">
+                <a href="/hero">
                     <button class="main-btn">Continue</button>
                 </a>
             </div>
