--- a/surprise.html
+++ b/surprise.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Valentines Day Addy!</title>
+    <link rel="shortcut icon" href="https://assets.cammy.dev/cameron/assets/cdl-2ndlogomark.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
 <body>
     <div class="paragraph-container">
         <div class="tc-img">
-            <img class="addy" src="/assets/ADDY.svg" alt="">
+            <img class="addy" src="https://assets.cammy.dev/cameron/assets/ADDY.svg" alt="">
         </div>
         <div class="paragraph">
             <p><em>Dear Addy,</em></p>
@@ -28,130 +29,147 @@
             <p><em>Sincerely yours,</em></p>
             <p><em>Cam-Cam</em></p>
         </div>
-        <img class="secondary-scroll" src="/assets/Scroll down - b.svg" alt="">
+        <img class="secondary-scroll" src="https://assets.cammy.dev/cameron/assets/Scroll%20down%20-%20b.svg" alt="">
     </div>
     <div class="v-day-lg-txt">
-        <img class="addy-v-day-txt" src="assets/v-day-addy.png" alt="">
+        <img class="addy-v-day-txt" src="https://assets.cammy.dev/cameron/assets/v-day-addy.png" alt="">
     </div>
     <div class="img-reel">
         <div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
-                <p class="reel-p-text-l">Placeholder paragraph text</p>
+                <h1 class="reel-h1-text-l">Bye-Bye Nails</h1>
+                <p class="reel-p-text-l">4 Jan 2023 | 4:12:23 PM</p>
+                <p class="reel-p-text-l">When you accidently burnt your nail 
+                    while on a group facetime call with Toby and I</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%201%20of%2014.jpeg" alt="Addy accidently burning her nail while on a group facetime call with Toby and Cameron">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
-                <p class="reel-p-text-r">Placeholder paragraph text</p>
+                <h1 class="reel-h1-text-r">PE Shenanigans</h1>
+                <p class="reel-p-text-r">5 Jan 2023 | 1:49:45 PM</p>
+                <p class="reel-p-text-r">I honestly don't remember what was going 
+                    on in this photo, but I thought both of you had funny expressions</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%202%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
-                <p class="reel-p-text-l">Placeholder paragraph text</p>
+                <p class="reel-p-text-l">11 Feb 2023 | 1:50:55 PM</p>
+                <p class="reel-p-text-l">This photo is pretty recent, but I included 
+                    it because it made me smile</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%203%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%204%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%205%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%206%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%207%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%208%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%209%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2010%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2011%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2012%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2013%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2014%20of%2014.jpeg" alt="">
             </div>
         </div>
     </div>
