--- a/surprise.html
+++ b/surprise.html
@@ -69,9 +69,9 @@
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-r">Yeah, bestie?</h1>
                 <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-r">Placeholder paragraph text</p>
+                <p class="reel-p-text-r">I just thought this was an adorable photo</p>
             </div>
             <div class="img-photo-reel-r">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%204%20of%2014.jpeg" alt="">
@@ -154,8 +154,8 @@
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
-                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
+                <h1 class="reel-h1-text-l">BAND CONCERT NIGHT👹</h1>
+                <p class="reel-p-text-l">15 Dec 2022 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
@@ -164,9 +164,9 @@
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
-                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-r">Placeholder paragraph text</p>
+                <h1 class="reel-h1-text-r">PE Shenanigans, Part 2?</h1>
+                <p class="reel-p-text-r">17 Jan 2023 | 01:59:47 PM</p>
+                <p class="reel-p-text-r">Moments before disaster? I think this was when we had to do Pacer Prep🥲</p>
             </div>
             <div class="img-photo-reel-r">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2014%20of%2014.jpeg" alt="">
