--- a/surprise.html
+++ b/surprise.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Valentines Day Addy!</title>
-    <link rel="shortcut icon" href="https://assets.cammy.dev/cameron/assets/cdl-2ndlogomark.png">
+    <link rel="shortcut icon" href="https://assets.cammy.dev/cameron/assets/cameron/cdl-2ndlogomark.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 <body>
     <div class="paragraph-container">
         <div class="tc-img">
-            <img class="addy" src="https://assets.cammy.dev/cameron/assets/ADDY.svg" alt="">
+            <img class="addy" src="https://assets.cammy.dev/cameron/assets/addy/ADDY.svg" alt="">
         </div>
         <div class="paragraph">
             <p><em>Dear Addy,</em></p>
@@ -32,7 +32,7 @@
         <img class="secondary-scroll" src="https://assets.cammy.dev/cameron/assets/Scroll%20down%20-%20b.svg" alt="">
     </div>
     <div class="v-day-lg-txt">
-        <img class="addy-v-day-txt" src="https://assets.cammy.dev/cameron/assets/v-day-addy.png" alt="">
+        <img class="addy-v-day-txt" src="https://assets.cammy.dev/cameron/assets/addy/v-day-addy.png" alt="">
     </div>
     <div class="img-reel">
         <div id="img-reel-l">
@@ -43,7 +43,7 @@
                     while on a group facetime call with Toby and I</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%201%20of%2014.jpeg" alt="Addy accidently burning her nail while on a group facetime call with Toby and Cameron">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%201%20of%2014.jpeg" alt="Addy accidently burning her nail while on a group facetime call with Toby and Cameron">
             </div>
         </div>
         <div id="img-reel-r">
@@ -54,112 +54,113 @@
                     on in this photo, but I thought both of you had funny expressions</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%202%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%202%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-l">Nature, yup</h1>
                 <p class="reel-p-text-l">11 Feb 2023 | 1:50:55 PM</p>
                 <p class="reel-p-text-l">This photo is pretty recent, but I included 
                     it because it made me smile</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%203%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%203%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">Yeah, bestie?</h1>
+                <h1 class="reel-h1-text-r">Yeah, get it bestie!</h1>
                 <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-r">I just thought this was an adorable photo</p>
+                <p class="reel-p-text-r">I just thought this was an adorable photo, </p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%204%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%204%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-l">Where'd you get a candle??</h1>
                 <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%205%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%205%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-r">The Kraft Macarroni Noodle</h1>
                 <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%206%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%206%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-l">yeah bestie?</h1>
                 <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%207%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%207%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
-                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
+                <h1 class="reel-h1-text-r">Toby's Birthday Dinner!</h1>
+                <p class="reel-p-text-r">28 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%208%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%208%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-l">Okay, I like it Picaso</h1>
                 <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%209%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%209%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-r">Golden Hour-ish</h1>
                 <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
                 <p class="reel-p-text-r">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2010%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2010%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-l">Morning Tings</h1>
                 <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-l">Placeholder paragraph text</p>
+                <p class="reel-p-text-l">I don't know how I beat you to school that day, but yes. </p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2011%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2011%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
             <div id="text-img-reel-r">
-                <h1 class="reel-h1-text-r">H1 Placeholder Text</h1>
+                <h1 class="reel-h1-text-r">BAND CONCERT NIGHT👹</h1>
                 <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-r">Placeholder paragraph text</p>
+                <p class="reel-p-text-r">Allen was very out of line at this concert. I still internally hold a 
+                    grudge against him for what he did</p>u
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2012%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2012%20of%2014.jpeg" alt="">
             </div>
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
-                <h1 class="reel-h1-text-l">BAND CONCERT NIGHT👹</h1>
+                <h1 class="reel-h1-text-l">BOWLING </h1>
                 <p class="reel-p-text-l">15 Dec 2022 | 00:00:00 PM</p>
                 <p class="reel-p-text-l">Placeholder paragraph text</p>
             </div>
             <div class="img-photo-reel-l">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2013%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2013%20of%2014.jpeg" alt="">
             </div>
         </div>
         <div id="img-reel-r">
@@ -169,7 +170,7 @@
                 <p class="reel-p-text-r">Moments before disaster? I think this was when we had to do Pacer Prep🥲</p>
             </div>
             <div class="img-photo-reel-r">
-                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy%20-%2014%20of%2014.jpeg" alt="">
+                <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2014%20of%2014.jpeg" alt="">
             </div>
         </div>
     </div>
