--- a/surprise.html
+++ b/surprise.html
@@ -70,7 +70,7 @@
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">Yeah, get it bestie!</h1>
-                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
+                <p class="reel-p-text-r">Unknown Jan 2023 | Sometime afterschool</p>
                 <p class="reel-p-text-r">I just thought this was an adorable photo, </p>
             </div>
             <div class="img-photo-reel-r">
@@ -79,8 +79,8 @@
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">Where'd you get a candle??</h1>
-                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-l">Placeholder paragraph text</p>
+                <p class="reel-p-text-l">4 Jan 2023 | Sometime after 4pm</p>
+                <p class="reel-p-text-l">Our excitedness has you playing with candles? idk, you do you bestie</p>
             </div>
             <div class="img-photo-reel-l">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%205%20of%2014.jpeg" alt="">
@@ -89,8 +89,8 @@
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">The Kraft Macarroni Noodle</h1>
-                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-r">Placeholder paragraph text</p>
+                <p class="reel-p-text-r">1 Jan 2023 | Sometime after 2:20:00 PM</p>
+                <p class="reel-p-text-r">W Kraft Macarroni Noodle in the backgroud</p>
             </div>
             <div class="img-photo-reel-r">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%206%20of%2014.jpeg" alt="">
@@ -98,8 +98,8 @@
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">yeah bestie?</h1>
-                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-l">Placeholder paragraph text</p>
+                <p class="reel-p-text-l">1 Jan 2023 | Sometime during the school day (Look at that, I've got peak detective skills 😎</p>
+                <p class="reel-p-text-l">yes.</p>
             </div>
             <div class="img-photo-reel-l">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%207%20of%2014.jpeg" alt="">
@@ -108,8 +108,8 @@
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">Toby's Birthday Dinner!</h1>
-                <p class="reel-p-text-r">28 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-r">Placeholder paragraph text</p>
+                <p class="reel-p-text-r">28 Jan 2023 | Sometime after 05:20:00 PM but before 09:30:00 PM</p>
+                <p class="reel-p-text-r">That was a pretty good time together, and I'm glad I was invited, we were ther for quite sometime ngl tho, like 2 hour 😭</p>
             </div>
             <div class="img-photo-reel-r">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%208%20of%2014.jpeg" alt="">
@@ -117,8 +117,8 @@
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">Okay, I like it Picaso</h1>
-                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-l">Placeholder paragraph text</p>
+                <p class="reel-p-text-l">Also Sometime in  Jan 2023 | Sometime before 02:26:00 PM</p>
+                <p class="reel-p-text-l">Idk something about this photo is just perfect, it's almost as if the camera settings were just right</p>
             </div>
             <div class="img-photo-reel-l">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%209%20of%2014.jpeg" alt="">
@@ -127,8 +127,8 @@
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">Golden Hour-ish</h1>
-                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
-                <p class="reel-p-text-r">Placeholder paragraph text</p>
+                <p class="reel-p-text-r">1 Jan 2023 | Sometime afterschool, but before 03:35:00 PM</p>
+                <p class="reel-p-text-r">Sun was definitely hitting that day, we all looked very good</p>
             </div>
             <div class="img-photo-reel-r">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2010%20of%2014.jpeg" alt="">
@@ -136,7 +136,7 @@
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">Morning Tings</h1>
-                <p class="reel-p-text-l">1 Jan 2023 | 00:00:00 PM</p>
+                <p class="reel-p-text-l">1 Jan 2023 | Definatly wayyy before 08:00:00 AM</p>
                 <p class="reel-p-text-l">I don't know how I beat you to school that day, but yes. </p>
             </div>
             <div class="img-photo-reel-l">
@@ -146,7 +146,7 @@
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">BAND CONCERT NIGHT👹</h1>
-                <p class="reel-p-text-r">1 Jan 2023 | 00:00:00 PM</p>
+                <p class="reel-p-text-r">15 Dec 2022 | Well calltime was like 06:30:00 PM I think?</p>
                 <p class="reel-p-text-r">Allen was very out of line at this concert. I still internally hold a 
                     grudge against him for what he did</p>u
             </div>
@@ -156,8 +156,8 @@
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">BOWLING </h1>
-                <p class="reel-p-text-l">15 Dec 2022 | 00:00:00 PM</p>
-                <p class="reel-p-text-l">Placeholder paragraph text</p>
+                <p class="reel-p-text-l">15 Dec 2022 | 02:22:30 PM (roughly)</p>
+                <p class="reel-p-text-l">We were very much on track to becoming the bowling champs 🥳 (you were definitely carrying us, so thank you very much)</p>
             </div>
             <div class="img-photo-reel-l">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2013%20of%2014.jpeg" alt="">
