--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="main-content">
             <div class="text">
-                <p class="main-text-class">As things change, I must adapt to those changes and continue to move on — I hope you all are having a fantastic day.</p>
+                <p class="main-text-class">Heyyy Addyyy!! — I hope you're having a fantastic day.</p>
             </div>
         </div>
         <div class="arrow-btn">
