--- a/surprise.html
+++ b/surprise.html
@@ -89,7 +89,7 @@
         <div id="img-reel-r">
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">The Kraft Macarroni Noodle</h1>
-                <p class="reel-p-text-r">1 Jan 2023 | Sometime after 2:20:00 PM</p>
+                <p class="reel-p-text-r">Unknown Dec 2022 - Jan 2023 | Sometime after 2:20:00 PM</p>
                 <p class="reel-p-text-r">W Kraft Macarroni Noodle in the backgroud</p>
             </div>
             <div class="img-photo-reel-r">
@@ -98,7 +98,7 @@
         </div><div id="img-reel-l">
             <div id="text-img-reel-l">
                 <h1 class="reel-h1-text-l">yeah bestie?</h1>
-                <p class="reel-p-text-l">1 Jan 2023 | Sometime during the school day (Look at that, I've got peak detective skills 😎</p>
+                <p class="reel-p-text-l">1 Jan 2023 | Sometime during the school day (Look at that, I've got peak detective skills 😎)</p>
                 <p class="reel-p-text-l">yes.</p>
             </div>
             <div class="img-photo-reel-l">
@@ -109,7 +109,7 @@
             <div id="text-img-reel-r">
                 <h1 class="reel-h1-text-r">Toby's Birthday Dinner!</h1>
                 <p class="reel-p-text-r">28 Jan 2023 | Sometime after 05:20:00 PM but before 09:30:00 PM</p>
-                <p class="reel-p-text-r">That was a pretty good time together, and I'm glad I was invited, we were ther for quite sometime ngl tho, like 2 hour 😭</p>
+                <p class="reel-p-text-r">That was a pretty good time together, and I'm glad I was invited, we were there for quite sometime ngl tho, like 2 hours 😭</p>
             </div>
             <div class="img-photo-reel-r">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%208%20of%2014.jpeg" alt="">
@@ -148,7 +148,7 @@
                 <h1 class="reel-h1-text-r">BAND CONCERT NIGHT👹</h1>
                 <p class="reel-p-text-r">15 Dec 2022 | Well calltime was like 06:30:00 PM I think?</p>
                 <p class="reel-p-text-r">Allen was very out of line at this concert. I still internally hold a 
-                    grudge against him for what he did</p>u
+                    grudge against him for what he did</p>
             </div>
             <div class="img-photo-reel-r">
                 <img class="addy-img" src="https://assets.cammy.dev/cameron/assets/addy/addy%20-%2012%20of%2014.jpeg" alt="">
