--- a/hero.html
+++ b/hero.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/hero.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JR5K5Z8ZN0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JR5K5Z8ZN0');
+</script>
 <body>
     <div class="container">
         <div class="main-content">
